Remove preivew switch case