@@ -7,7 +7,6 @@ plugins {
 
 group = 'ru.leti'
 version = '1.0.0'
-sourceCompatibility = "19"
 
 configurations {
     compileOnly {
@@ -95,12 +94,4 @@ protobuf {
 
 tasks.named('test') {
     useJUnitPlatform()
-}
-
-compileJava {
-    options.compilerArgs += ['--enable-preview']
-}
-
-bootRun {
-    jvmArgs(['--enable-preview'])
 }
